--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,9 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
 
 body {
-    font-family: 'Agbalumo', sans-serif;
-    line-height: 1;
+  font-family: 'Agbalumo', sans-serif;
+  line-height: 1;
+}
+
+
+@keyframes progress-bar {
+  0% {
+    width: 0;
   }
+  25% {
+    width: 10%;
+  }
+  50% {
+    width: 30%;
+  }
+  75% {
+    width: 50%;
+  }
+  100% {
+    width: 100%; 
+  }
+}
+
+.animate-progress-bar {
+  animation: progress-bar 1.5s ease-in-out infinite; 
+}
+
+
+
+
