--- a/src/app/global.css
+++ b/src/app/global.css
@@ -32,21 +32,15 @@ body {
 
 @keyframes progress-bar {
   0% {
-    width: 0;
-  }
-  25% {
-    width: 10%;
-  }
-  50% {
+    left: -30%;
     width: 30%;
   }
-  75% {
-    width: 50%;
-  }
   100% {
-    width: 100%; 
+    left: 100%;
+    width: 30%;
   }
 }
+
 
 .animate-progress-bar {
   animation: progress-bar 0.8s ease-in-out infinite; 
